bug fixes: extra page on even divisibility; pageNum reset

--- a/client/src/components/Controller.css
+++ b/client/src/components/Controller.css
@@ -10,3 +10,7 @@ footer {
   height: 28vh;
   background-color: brown;
 }
+
+.FullScreenDiv {
+  cursor: pointer;
+}
