--- a/client/src/components/main/SlideViewer.css
+++ b/client/src/components/main/SlideViewer.css
@@ -4,4 +4,6 @@
 
 .MainSlide {
   height: 100%;
+  cursor: pointer;
+  width: 50vw;
 }
